Copy-adi B1 yfir i B2

--- a/Verkefni 1/B1/B1.cbp
+++ b/Verkefni 1/B1/B1.cbp
@@ -32,7 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/superhero.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/superhero.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
