--- a/Verkefni 1/B2/B2.cbp
+++ b/Verkefni 1/B2/B2.cbp
@@ -32,7 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/superhero.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/superhero.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
