Made Id service and repository and made Order use it to get a new id. Also made all saved files not go into the data folder

--- a/MainAssignment/MainAssignment/.gitignore
+++ b/MainAssignment/MainAssignment/.gitignore
@@ -8,3 +8,9 @@ toppingList.dat
 pizzaMenu.txt
 orders.txt
 data/
+id.txt
+pizzaMenu.txt
+activeOrders.txt
+extraMenu.dat
+locationList.dat
+toppingList.dat
